--- a/src/app/funds/balance/qubera-popup/qubera-popup.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-popup.component.html
@@ -3,7 +3,7 @@
     <!-- btn modal close -->
     <div class="modal__controls modal__controls--top">
       <a class="modal__button modal__button--close"
-         (click)="onCloseSendQuberaPopupMain()">
+         (click)="onCloseQuberaPopupMain()">
         <span>{{'close' | translate}}</span>
         <img class="modal__button-icon" src="../../../assets/img/close.svg">
       </a>
@@ -12,7 +12,7 @@
         *ngIf="component == 'WITHDRAW'"
         [steper]="steper"
         [qubera]="optionData"
-        (closeSendQuberaPopup)="onCloseSendQuberaPopupMain()"
+        (closeSendQuberaPopup)="onCloseQuberaPopupMain()"
       >
        </app-withdraw>
 
@@ -20,7 +20,7 @@
         *ngIf="component == 'TRANSFER'"
         [steper]="steper"
         [qubera]="optionData"
-        (closeSendQuberaPopup)="onCloseSendQuberaPopupMain()"
+        (closeSendQuberaPopup)="onCloseQuberaPopupMain()"
       >
       </app-transfer>
 
@@ -28,26 +28,26 @@
         *ngIf="component == 'DEPOSIT'"
         [steper]="steper"
         [qubera]="optionData"
-        (closeSendQuberaPopup)="onCloseSendQuberaPopupMain()"
+        (closeSendQuberaPopup)="onCloseQuberaPopupMain()"
       >
       </app-deposit>
-      
-      <app-create-fug
-        *ngIf="component == 'CREATEFUG'"
-        [steper]="steper"
-        [qubera]="optionData"
-        (closeSendQuberaPopup)="onCloseSendQuberaPopupMain()"
-        (getKYCStatus)="getStatusKYC()"
-      >
-      </app-create-fug>
 
-      <app-create-currency
-        *ngIf="component == 'CREATECURRENCY'"
+      <app-qubera-kyc
+        *ngIf="component == 'QUBERAKYC'"
+        [steper]="steper"
+        [qubera]="optionData"
+        (closeSendQuberaPopup)="onCloseQuberaPopupMain()"
+        (getKYCStatus)="getStatusKYC()"
+      >
+      </app-qubera-kyc>
+
+      <app-create-qubera
+        *ngIf="component == 'CREATEQUBERA'"
         [steper]="steper"
         [qubera]="optionData"
         (getKYCStatus)="getStatusKYC()"
-        (closeSendQuberaPopup)="onCloseSendQuberaPopupMain()"
+        (closeQuberaPopup)="onCloseQuberaPopupMain()"
       >
-      </app-create-currency>
+      </app-create-qubera>
   </div>
 </div>
