--- a/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
@@ -1,8 +1,8 @@
 <div class="modal__content qubera-content">
   <div class="fiat-deposit-s1 fiat-withdraw-s1">
   <h2>{{'Transaction confirmation' | translate}}</h2>
-  <div class="inf-code" *ngIf="!googleAuthendefication">{{'Please enter two-factor authentication code that was sent to your email' | translate}}</div>
-  <div class="inf-code" *ngIf="googleAuthendefication">{{'Use Google Authenticator to generate pincode' | translate}}</div>
+  <div class="inf-code" *ngIf="!googleAuthenticator">{{'Please enter two-factor authentication code that was sent to your email' | translate}}</div>
+  <div class="inf-code" *ngIf="googleAuthenticator">{{'Use Google Authenticator to generate pincode' | translate}}</div>
 
   <form [formGroup]="form">
     <div class="input-block">
@@ -33,7 +33,7 @@
           <span class="key-info">Total with comission:</span>
           <span class="value-info">0.000005 EUR</span>
         </div> -->
-        
+
       </div>
     </div>
   </div>
