--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -1,54 +1,53 @@
 <!-- <table class="table qubera-table"
        *ngIf="kycStatus === KYC_STATUS.SUCCESS && quberaBalance.balance > 0"> -->
-    <table class="table qubera-table"
-       *ngIf="quberaBalance.length > 0 && quberaBalance[0] !== undefined">
-  <thead>
-    <tr>
-      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
-      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
-      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Available balance' | translate}}</th>
-      <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
-      <!-- <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th> -->
-      <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
-    </tr>
-  </thead>
-  <tbody class="table__body" *ngIf="balances != undefined">
-    <tr class="table__row" *ngFor="let balance of quberaBalance">
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/eur-white.svg">
+  <table class="table qubera-table" *ngIf="quberaBalance.length > 0">
+    <thead>
+      <tr>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Available balance' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
+        <!-- <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th> -->
+        <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
+      </tr>
+    </thead>
+    <tbody class="table__body" *ngIf="balances != undefined">
+      <tr class="table__row" *ngFor="let balance of quberaBalance">
+        <td class="table__cell">
+          <div class="balance__currency">
+            <div class="balance__currency-icon">
+              <img src="assets/img/currency-icons/eur-white.svg">
+            </div>
+            <span style="min-width: 70px;">{{balance?.availableBalance?.currencyCode}}</span>
+            <span class="balance__currency-name">{{balance?.currentBalance?.currencyCode}}</span>
           </div>
-          <span style="min-width: 70px;">{{balance?.availableBalance?.currencyCode}}</span>
-          <span class="balance__currency-name">{{balance?.currentBalance?.currencyCode}}</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tal">
-        <span>{{balance?.availableBalance?.amount}}</span>
-      </td>
-      <td class="table__cell table__cell--tal">
-        <span>{{balance?.currentBalance?.amount}}</span>
-      </td>
-      <td class="table__cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositQuberaOut.emit(true)">{{'Deposit' | translate}}</button>
-      </td>
-      <!-- <td class="table__cell"> -->
-        <!-- <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferQuberaOut.emit(true)" >{{'Transfer' | translate}}</button> -->
-      <!-- </td> -->
-      <td class="table__cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawQuberaOut.emit(true)">{{'Withdraw' | translate}}</button>
-      </td>
-    </tr>
-    <tr class="table__row balance__table-row" *ngIf="quberaBalance.length < 1">
-      <td class="table__cell table__cell--tac" colspan="10">
-        {{'No matching records found' | translate}}
-      </td>
-    </tr>
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span>{{balance?.availableBalance?.amount}}</span>
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span>{{balance?.currentBalance?.amount}}</span>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositQuberaOut.emit(true)">{{'Deposit' | translate}}</button>
+        </td>
+        <!-- <td class="table__cell"> -->
+          <!-- <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferQuberaOut.emit(true)" >{{'Transfer' | translate}}</button> -->
+        <!-- </td> -->
+        <td class="table__cell">
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawQuberaOut.emit(true)">{{'Withdraw' | translate}}</button>
+        </td>
+      </tr>
+      <tr class="table__row balance__table-row" *ngIf="quberaBalance.length < 1">
+        <td class="table__cell table__cell--tac" colspan="10">
+          {{'No matching records found' | translate}}
+        </td>
+      </tr>
     </tbody>
   </table>
 
-<div class="no-veryfied-qubera">
-  <div class="qubera-head" *ngIf="quberaBalance.length > 0 && quberaBalance[0] == undefined">
+<div class="no-veryfied-qubera" *ngIf="!balances.length">
+  <div class="qubera-head">
     <h3>{{'Open account for $20 and get 0% commission' | translate}} <br><span>{{'on outgoing payments in the Singapore Bank' | translate}}</span>
     </h3>
   </div>
@@ -61,10 +60,7 @@
       </div> -->
       <div [ngSwitch]="kycStatus">
         <div class="qubera-btn-wr" *ngSwitchCase="'SUCCESS'">
-            <button class="btn btn--active balance__title-btn" (click)="createCurrency.emit(true)" *ngIf="balances.length < 1">{{'Create Account' | translate}}</button>
-        </div>
-        <div class="qubera-btn-wr" *ngSwitchCase="'none'">
-          <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Proceed Verification' | translate}}</button>
+            <button class="btn btn--active balance__title-btn" (click)="createQuberaAccount.emit(true)" *ngIf="balances.length < 1">{{'Create Account' | translate}}</button>
         </div>
         <!-- если заявка на подтверждении -->
 
@@ -89,12 +85,12 @@
         </div>
 
         <div class="qubera-btn-wr" *ngSwitchDefault>
-          <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Proceed Verification' | translate}}</button>
+          <button class="btn btn--active balance__title-btn" (click)="quberaKycVerification.emit(true)">{{'Proceed Verification' | translate}}</button>
         </div>
       <!-- end 'если заявка на подтверждении' -->
       </div>
- 
-  
+
+
   <!-- <div class="qubera-btn-wr" *ngIf="kycStatus == 'SUCCESS'"> -->
 
 <!-- end 'если не зареган на fug' -->
@@ -102,7 +98,7 @@
 
 
 
-  <div class="qubera-benefits" *ngIf="quberaBalance.length > 0 && quberaBalance[0] == undefined">
+  <div class="qubera-benefits">
     <div class="ben-head">
       <h6>{{'Benefits' | translate}}</h6>
     </div>
@@ -148,7 +144,7 @@
           </svg>
           <span><b>{{'0% transfer fee' | translate}}</b> {{'between personal and trading account at Exrates' | translate}}</span>
         </li>
-      </ul>  
+      </ul>
     </div>
     <!-- <div class="for-vip">
       <h6>{{'For VIP clients' | translate}}</h6>
@@ -161,10 +157,6 @@
     <div class="detail-inf">
       <p>{{'A more detailed description of the conditions is available on the financial partner page.' | translate}} <a href="http://fug.sg">FUG</a>.</p>
     </div>
-
-
-             <!-- <button class="btn btn--active balance__title-btn" (click)="showPopup()">button for popup</button> -->
-
 
 
     <!-- <div class="qubera-icon">
@@ -187,7 +179,7 @@
     <div class="qubera-btn-wr">
       <button class="btn btn--active balance__title-btn">{{'Create Account Qubera' | translate}}</button>
     </div> -->
-    
+
   </div>
 
   <!--paginator start-->
