--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
@@ -47,18 +47,18 @@
       margin-bottom: 32px;
     }
     &__inputs-wrap {
-      flex-direction: row;
+      // flex-direction: row;
       align-items: flex-start;
       margin-bottom: 12px;
     }
     &__select {
       width: 100%;
-      margin-bottom: 0;
-      margin-right: 16px;
-      max-width: unset;
+      max-width: 270px;
+      margin: 0 auto 26px;
     }
     &__wrap-input {
-      margin-bottom: 0;
+      margin: 0 auto;
+      max-width: 270px;
     }
     &__fiat-successful-title {
       margin-bottom: 16px;
@@ -189,3 +189,6 @@
 }
 
 
+.btn{
+  max-width: 270px;
+}
