--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -26,7 +26,7 @@
 
         <div class="select refill__select" style="display: inline-block;">
             <div class="select__value select__value--active" (click)="togglePaymentSystemDropdown()">
-                {{this.model}}
+                {{selectedWithdraw}}
             </div>
             <div class="select__label">{{'Payment system' | translate}}</div>
             <div class="select__line"></div>
