--- a/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
@@ -8,6 +8,20 @@
     <div class="input-block">
       <input class="wrap-input__input" type="text" name="code" formControlName="code" required>
       <label class="wrap-input__label" for="code">{{'Code' | translate}}</label>
+      <ng-container *ngIf="!currentCode.valid && !currentCode.untouched && !statusMessage">
+        <div class="input-hint-wrapper">
+            <span class="wrap-input__message" *ngIf="!currentCode.valid">
+            {{'Code field is required.' | translate}}
+            </span>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="statusMessage">
+        <div class="input-hint-wrapper">
+          <span class="wrap-input__message">
+            {{statusMessage | translate}}
+          </span>
+        </div>
+      </ng-container>
     </div>
   </form>
   <div class="info-block">
