--- a/src/app/funds/balance/qubera-popup/create-qubera/step-one-qubera/step-one-qubera.component.html
+++ b/src/app/funds/balance/qubera-popup/create-qubera/step-one-qubera/step-one-qubera.component.html
@@ -7,10 +7,10 @@
       <img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
     </div>
   </div>
-  <div class="modal__content qubera-content">
-    <div class="fiat-deposit-s1 fiat-transfer">
+  <div class="modal__content qubera-content create-qubera">
+    <div class="fiat-deposit-s1 fiat-transfer ">
       <h2>{{'Confirmation account creation' | translate}}</h2>
-      <p>{{'To open an Exrates account, confirm the transaction with a code and email.' | translate}}</p>
+      <p>{{'To open an Exrates account, confirm with a code or email.' | translate}}</p>
       <form  [formGroup]="form">
         <div class="input-block">
           <input type="text" name="code" class="wrap-input__input" formControlName="code" required>
