--- a/src/app/funds/balance/qubera-popup/create-qubera/step-one-qubera/step-one-qubera.component.scss
+++ b/src/app/funds/balance/qubera-popup/create-qubera/step-one-qubera/step-one-qubera.component.scss
@@ -121,6 +121,9 @@
       color: #ffffff !important;
       &.btn--empty-blue {
         color: #237BEF !important;
+        &:disabled{
+              color: #91929F!important;
+        }
         &:hover {
           background-color: transparent !important;
           border: 1px solid #237BEF !important;
@@ -128,4 +131,12 @@
       }
     }
   }
-  
+
+
+.notice-block{
+  margin-top: 50px;
+}
+
+.fiat-deposit-s1 form{
+  border: none;
+}
