--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.scss
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.scss
@@ -1,4 +1,72 @@
 .choose-block {
-    margin-top: 10px;
-    margin-bottom: 20px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+
+.fiat-deposit-s1 form{
+	border: none;
+}
+
+.check{
+	display: flex;
+	align-items: center;
+	margin-bottom: 20px;
+	span{
+		font-weight: 500;
+		font-size: 13px;
+		line-height: 1.15;
+		color: #525F73;
+		@media(max-width: 1200px){
+			color: #DEDEFB;
+		}
+	}
+
+	input{
+		&:checked{
+			&+label{
+				&::after{
+
+					opacity: 1;
+				}
+			}
+		}
+	}
+}
+
+.read{
+	border: 1px solid #91929F;
+	cursor: pointer;
+	border-radius: 2px;
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin-right: 6px;
+	margin-top: -2px;
+	position: relative;
+	@media(max-width: 1200px){
+		border: 1px solid #DEDEFB;
+	}
+	&::after{
+		content: "";
+		position: absolute;
+		top: 2px;
+		right: 0;
+		display: block;
+		width: 13px;
+		height: 10px;
+		content: "";
+		background-image: url(/step-valid.svg);
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: 100%;
+		opacity: 0;
+		transition: .3s;
+		@media(max-width: 1200px){
+			background-image: url(/check.svg);
+		}
+	}
+}
+
+#read {
+	display: none;
 }
