--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -73,7 +73,12 @@
             </ul>
           </div>
         </div> -->
-
+        <div class="wrap-input send__wrap-input">
+          <div class="avaliable">{{'Available:' | translate}}
+            <a class="link">
+              232
+            </a>
+          </div>
         <app-price-input  style="display: inline-block;"
           [placeholder]="'Amount'"
           formControlName="amount"
@@ -82,6 +87,7 @@
           >
 
         </app-price-input>
+      </div>
       </div>
       <div class="check">
             <input type="checkbox"
