--- a/src/app/funds/balance/qubera-popup/qubera-kyc/step-one/step-one.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-kyc/step-one/step-one.component.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="rules">
-      <p>{{'Read terms and conditions.' | translate}} <a href="">FUG</a></p>
+      <p>{{'Read terms and conditions.' | translate}} <a href="http://fug.sg" target="_blank">FUG</a></p>
       <div class="check">
             <input type="checkbox"
                   id="read"
