--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.scss
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.scss
@@ -55,14 +55,14 @@
 		width: 13px;
 		height: 10px;
 		content: "";
-		background-image: url(./assets/img/step-valid.svg);
+		background-image: url(/assets/img/step-valid.svg);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: 100%;
 		opacity: 0;
 		transition: .3s;
 		@media(max-width: 1200px){
-			background-image: url(./assets/img/check.svg);
+			background-image: url(/assets/img/check.svg);
 		}
 	}
 }
