--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -141,7 +141,7 @@
           </div>
         </div>
       </div>
-      </div>
+      <!-- </div> -->
       <div class="check">
             <input type="checkbox"
                   id="read"
