--- a/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
@@ -24,20 +24,20 @@
       </ng-container>
     </div>
   </form>
-  <div class="info-block">
+  <div class="info-block" *ngIf="payments">
     <div class="left-part">
       <div class="left-block">
-        <div class="item-info">
+        <div class="item-info" *ngIf="payments.paymentAmount">
           <span class="key-info">You want to withdraw:</span>
-          <span class="value-info">{{payments?.paymentAmount?.amount}} {{payments?.paymentAmount?.currencyCode}}</span>
+          <span class="value-info">{{payments.paymentAmount.amount}} {{payments.paymentAmount.currencyCode}}</span>
         </div>
         <div class="item-info">
           <span class="key-info">Exchange comission:</span>
           <span class="value-info">3% = 15 EUR</span>
         </div>
-        <div class="item-info">
+        <div class="item-info" *ngIf="payments.paymentAmount">
           <span class="key-info">Merchant comission:</span>
-          <span class="value-info">{{payments?.feeAmount?.amount}} {{payments?.feeAmount?.currencyCode}}</span>
+          <span class="value-info">{{payments.feeAmount?.amount}} {{payments?.feeAmount?.currencyCode}}</span>
         </div>
         <!-- <div class="item-info">
           <span class="key-info">Total comission:</span>
