fixed fiat bugs

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -340,6 +340,7 @@
   <app-qubera-popup
     *ngIf="showQuberaPopup"
     [showPopup]="showQuberaPopup"
+    [balances]="quberaBalances$ | async"
     [optionData]="quberaData"
     [steper]="1"
     (closeQuberaPopupMain)="openQuberaPopup(false)"
