--- a/src/app/funds/balance/qubera-popup/qubera-popup.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-popup.component.html
@@ -12,6 +12,7 @@
         *ngIf="component == 'WITHDRAW'"
         [steper]="steper"
         [qubera]="optionData"
+        [quberaBalances]="balances.data"
         (closeSendQuberaPopup)="onCloseQuberaPopupMain()"
       >
        </app-withdraw>
