--- a/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
@@ -31,10 +31,10 @@
           <span class="key-info">You want to withdraw:</span>
           <span class="value-info">{{payments.paymentAmount.amount}} {{payments.paymentAmount.currencyCode}}</span>
         </div>
-        <div class="item-info">
+        <!-- <div class="item-info">
           <span class="key-info">Exchange comission:</span>
           <span class="value-info">3% = 15 EUR</span>
-        </div>
+        </div> -->
         <div class="item-info" *ngIf="payments.paymentAmount">
           <span class="key-info">Merchant comission:</span>
           <span class="value-info">{{payments.feeAmount?.amount}} {{payments?.feeAmount?.currencyCode}}</span>
