--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-        <div class="row row--jcsb widget__trading-row  input-row">
+        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue == baseType.MARKET_PRICE}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
             [placeholder]="translateService.instant('Quantity')"
@@ -145,8 +145,8 @@
         </div>
       </div>
 
-      <div class="row row--jcsb widget__trading-row input-row">
-        <div class="wrap-input widget__input no-line">
+      <div class="row row--jcsb widget__trading-row input-row" [ngClass]="{'d-none': dropdownLimitValue == baseType.MARKET_PRICE}">
+        <div class="wrap-input widget__input no-line" >
           <app-price-input
           [placeholder]="translateService.instant('Quantity')"
           [currencyLabel]="arrPairName[0]"
