--- a/src/app/dashboard/components/markets/markets.component.scss
+++ b/src/app/dashboard/components/markets/markets.component.scss
@@ -227,6 +227,8 @@
       color: #fff;
       font-weight: 500;
       font-size: 14px;
+          padding: 0 0 5px;
+    line-height: .9;
     }
   }
 @media(min-width: 1200px){
